# avsthon

./: .gitignore  .gitmodules  Makefile  README.md
.github/workflows/: test.yml
aggregator/: Cargo.toml
aggregator/src/: aggregator_config.rs  lib.rs  main.rs  server.rs
app/: Cargo.toml  Dockerfile
app/src/: main.rs
contract-bindings/: Cargo.toml
contract-bindings/src/: lib.rs
contract-bindings/src/abis/: ClientAppRegistry.json  GizaAvs.json  TaskRegistry.json
contracts/: .gitignore  lcov.info
contracts/.github/workflows/: test.yml
contracts/script/: Constants.sol  DeployContracts.s.sol  DeployTaskAndAppRegistry.s.sol
contracts/src/: ClientAppRegistry.sol  GizaAvs.sol  Ownable.sol  TaskRegistry.sol
contracts/src/interfaces/: IClientAppRegistry.sol
contracts/test/: ClientAppRegistry.t.sol  TaskRegistry.t.sol  TestOwnable.t.sol  TestState.sol
operator/: Cargo.toml
operator/src/: docker_client.rs  lib.rs  main.rs  operator_config.rs
