[package]
name = "operator"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
alloy = { version = "0.4.2", features = ["full", "sol-types"] }
tokio = { version = "1.40", features = ["full", "rt-multi-thread", "sync"] }
contract-bindings = { path = "../contract-bindings" }
alloy-primitives = "0.8.7"
eyre = "0.6.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time"] }
time = { version = "0.3", features = ["macros"] }
